# cg23-assn1

./: .gitattributes  .gitignore  README.txt  TODO.txt  assn0.txt  assn1.txt  cm.bat  grade0.txt  show.bat  trace.bat
assn1soln/: CMakeLists.txt  README.txt
assn1soln/data/: balls3-cases.ray  balls3-twist.ray  test1x1.ray
assn1soln/src/: Color.hpp  Config.h.in  Object.cpp  Object.hpp  ObjectList.cpp  ObjectList.hpp  Polygon.cpp  Polygon.hpp  Ray.cpp  Ray.hpp  Sphere.cpp  Sphere.hpp  Trace.cpp  Vec3.hpp  Vec3.inl  World.cpp  World.hpp
trace/: CMakeLists.txt  trace.ppm
trace/data/: test1.ray
trace/output/: balls3-color.ppm
trace/src/: Config.h.in  G.cpp  G.hpp  Globals.cpp  Globals.hpp  Light.cpp  Light.hpp  Object.cpp  Object.hpp  ObjectVec.cpp  ObjectVec.hpp  Parser.cpp  Parser.hpp  Polygon.cpp  Polygon.hpp  Ray.cpp  Ray.hpp  Screen.cpp  Screen.hpp  Screen.inl  Sphere.cpp  Sphere.hpp  Sphere.inl  Surface.hpp  Surface.inl  Tests.hpp  Trace.cpp  Vec2.cpp  Vec2.hpp  Vec2.inl  Vec2Inline.inl  Vec3.cpp  Vec3.hpp  Vec3.inl  Vec3Inline.inl  parse.cpp  parse.hpp  shared_data.hpp  sphere.hpp  sphere.inl  (+4 more)
